# com.giantarmy.adaptiveperformance.windows

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE.md  README.md  package.json
Documentation~/: TableOfContents.md  build-and-validate.md  getting-started.md  index.md  parity-matrix.md  requirements.md  troubleshooting.md  whats-new.md
Editor/DeviceSimulator/: AdaptivePerformanceExtension.uss  AdaptivePerformanceExtension.uxml  AdaptivePerformanceWindowsUIExtension.cs  GiantArmy.AdaptivePerformance.Simulator.Windows.Extension.Editor.asmdef
Editor/Provider/Management/: GiantArmy.AdaptivePerformance.Windows.Editor.asmdef  GiantArmyWindowsProviderBuildProcess.cs  GiantArmyWindowsProviderFrameStatsDialog.cs  GiantArmyWindowsProviderMetadata.cs  GiantArmyWindowsProviderSettingsEditor.cs
Runtime/: AssemblyInfo.cs  GiantArmy.AdaptivePerformance.Windows.asmdef
Runtime/Plugins/Windows/NativeBridge~/: CMakeLists.txt  GiantArmyWindowsThermalBridge.cpp  ThermalAmd.cpp  ThermalCommon.h  ThermalFallbacks.cpp  ThermalIntel.cpp  ThermalNvidia.cpp  build-bridge.ps1
Runtime/Plugins/Windows/NativeBridge~/include/: GiantArmyWindowsThermalBridge.h
Runtime/Plugins/Windows/NativeBridge~/tools/: NvapiPowerProbe.cpp  ThermalBridgeCli.cpp
Runtime/Provider/: GiantArmyWindowsAdaptivePerformanceSubsystem.cs
Runtime/Provider/Management/: GiantArmyWindowsProviderConstants.cs  GiantArmyWindowsProviderLoader.cs  GiantArmyWindowsProviderSettings.cs
Tests/Runtime/: AdaptivePerformanceWindowsTests.cs  GiantArmy.AdaptivePerformance.Windows.Tests.asmdef
